tests/invalid/indentation2.nt
# invalid indentation, must not start with indentation
    key 1: value 1
